modules/gdscript/tests/scripts/parser/errors/bad_f_string_2.gd
func test():
    print(f"slot isn't closed {42")
